// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PointerBox passes the "bg" prop to both <BorderBox> and <Caret> 1`] = `
.c0 {
  background-color: #d73a49;
  border: 1px solid;
  border-color: #e1e4e8;
  border-radius: 3px;
}

<div
  className="c0"
>
  <svg
    height={16}
    style={
      Object {
        "left": "50%",
        "marginLeft": -8,
        "pointerEvents": "none",
        "position": "absolute",
        "top": "100%",
      }
    }
    width={16}
  >
    <g
      transform="translate(8,0)"
    >
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="#d73a49"
      />
      <path
        d="M-8,0L0,8L8,0"
        fill="none"
        stroke="#e1e4e8"
        strokeWidth={1}
      />
    </g>
  </svg>
</div>
`;

exports[`PointerBox passes the "borderColor" prop to both <BorderBox> and <Caret> 1`] = `
.c0 {
  border: 1px solid;
  border-color: #d73a49;
  border-radius: 3px;
}

<div
  className="c0"
>
  <svg
    height={16}
    style={
      Object {
        "left": "50%",
        "marginLeft": -8,
        "pointerEvents": "none",
        "position": "absolute",
        "top": "100%",
      }
    }
    width={16}
  >
    <g
      transform="translate(8,0)"
    >
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="#fff"
      />
      <path
        d="M-8,0L0,8L8,0"
        fill="none"
        stroke="#d73a49"
        strokeWidth={1}
      />
    </g>
  </svg>
</div>
`;

exports[`PointerBox renders a <Caret> in <BorderBox> with relative positioning 1`] = `
.c0 {
  border: 1px solid;
  border-color: #e1e4e8;
  border-radius: 3px;
}

<div
  className="c0 "
>
  <svg
    height={16}
    style={
      Object {
        "left": "50%",
        "marginLeft": -8,
        "pointerEvents": "none",
        "position": "absolute",
        "top": "100%",
      }
    }
    width={16}
  >
    <g
      transform="translate(8,0)"
    >
      <path
        d="M-8,0L0,8L8,0L-8,0Z"
        fill="#fff"
      />
      <path
        d="M-8,0L0,8L8,0"
        fill="none"
        stroke="#e1e4e8"
        strokeWidth={1}
      />
    </g>
  </svg>
</div>
`;
